# community

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rules.md
app/: db.py  main.py  models.py  scheduler.py  schemas.py
app/api/: deps.py  galleries.py  ops.py  topics.py
app/collectors/: base.py  dcinside.py  hackernews.py  reddit.py  registry.py  utils.py
app/core/: config.py  logging.py
app/services/: briefing.py  ingest.py  scoring.py  topic_engine.py  topics.py
app/static/: app.css  app.js  index.html
scripts/: seed_galleries.py
tests/: conftest.py  test_briefing.py  test_briefing_api.py  test_dcinside_parser.py  test_frontend.py  test_ingest.py  test_ops.py  test_scoring.py  test_topic_engine.py
